<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxEyeGreen2" />

    <CheckBox
        android:id="@+id/checkBoxBlack2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/black"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxEyeBrown2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEyeGreen2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="VisualLintButtonSize" />

    <CheckBox
        android:id="@+id/checkBoxEyeBrown2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/brown"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxeyeBlue2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxBlack2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="VisualLintButtonSize" />

    <CheckBox
        android:id="@+id/checkBoxeyeBlue2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxEyeBrown2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="VisualLintButtonSize" />

    <CheckBox
        android:id="@+id/checkBoxEyeGreen2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/green"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxBlack2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:importantForAutofill="yes"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/switch3"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="71dp" />

    <Switch
        android:id="@+id/switch4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/switch3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAutoComplete2"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize,TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/passport"
        app:layout_constraintEnd_toStartOf="@+id/switch4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextAutoComplete2"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextAutoComplete2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/country"
        android:importantForAutofill="yes"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate2"
        tools:ignore="VisualLintTextFieldSize,TouchTargetSizeCheck"
        tools:layout_editor_absoluteX="70dp" />

    <EditText
        android:id="@+id/editTextDate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/birth_date"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="Last Name"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextFields,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        tools:ignore="VisualLintTextFieldSize" />
</androidx.constraintlayout.widget.ConstraintLayout>